--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.suxrobdev.calculator">
+    package="com.example.calculator">
    <application
         android:label="Calculator"
         android:name="${applicationName}"
