--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,18 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+
+
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "dev_assets/calculator.png"
+  min_sdk_android: 20 # android min sdk min:16, default 21
+  adaptive_icon_background: '#FFFFFF'
+  adaptive_icon_foreground: 'dev_assets/calculator.png'
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
